    ``pyramid.security.Deny`` in couple of packages.
  * **Update:** Changed the way the ``stalker.defaults`` is created.
  * **Fix:** **EnvironmentBase.get_version_from_full_path()**,
    **EnvironmentBase.get_versions_from_path()**,
    **EnvironmentBase.trim_repo_path()**, **EnvironmentBase.find_repo** methods
    are now working properly.

* **WebUI:**

  * **Fix:** GanttChart  view of Assets, Shots,Sequences or Tasks now displays
    only the children and parents of that Task derivative.
  * **Update:** Task create/update dialog now displays the full hierarchy in
    parent/dependent task listings.
  * **Fix:** TimeLog create/update dialog now displays the default times
    correctly when creating a new TimeLog.
  * **Fix:** TimeLog create/update view callables are now checking if there
    will be any OverBookedError raised.
  * **Fix:** Task create/update dialog now will not list the task itself in
    parent and dependent task lists, if the UI is called with a Task instance
    ({{task}} is not None).
  * **Update:** For Asset Page and Task Page tab order is changed.
  * **New:** Starts and Ends attributes are added to Task Summary Page.
  * **Update:** List of Users, Departments and Groups are now sorted by using
    the name of the entity.
  * **Update:** Task create/update dialog now has a new field called
    ``priority``.
  * **Update:** **Task.schedule_constraint** is now filled with correct
    information when creating/updating a Task.
  * **Fix:** Selected 'Status' attribute for 'Task Dialog' in 'Update' mode is
      set when dialog is open.
  * **New:** Version List Page and Create/Update Dialogs added.
  * **New:** Vacation List Page and Create/Update Dialogs added.
  * **Fix:** Merge tested, and vacation adding is finished.

  * **JQueryGantt:**

    * **Update:** Context menu can now be opened in task names in grid editor.
    * **Update:** Optimized the creation of task rows.