@@ -25,6 +25,8 @@ Stalker Changes
     **EnvironmentBase.get_versions_from_path()**,
     **EnvironmentBase.trim_repo_path()**, **EnvironmentBase.find_repo** methods
     are now working properly.
+  * **Update:** Added **Version.absolute_full_path** property which renders the
+    absolute full path which also includes the repository path.
 
 * **WebUI:**
 
